2004-09-23  Michael Natterer  <mitch@gimp.org>
	* app/dialogs/Makefile.am
	* app/dialogs/color-dialog.[ch]: removed...

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpcolordialog.[ch]: ...and added as widget.

	* app/core/gimpmarshal.list: new marshaller VOID__BOXED_ENUM.

	* app/widgets/widgets-enums.[ch]: new enum GimpColorDialogState.

	* app/widgets/gimpcolormapeditor.[ch]
	* app/widgets/gimpcolorpanel.[ch]
	* app/widgets/gimpgradienteditor.[ch]
	* app/widgets/gimppaletteeditor.[ch]
	* app/widgets/gimptoolbox-color-area.c
	* app/actions/gradient-editor-commands.c
	* app/actions/view-commands.c: ported to GimpColorDialog. Removes
	a whole bunch of ugly widgets/ -> dialogs/ dependencies.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14832 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/widgets/Makefile.am
+++ b/app/widgets/Makefile.am
@@ -47,6 +47,8 @@ libappwidgets_a_sources = \
 	gimpclipboard.h			\
 	gimpcolorbar.c			\
 	gimpcolorbar.h			\
+	gimpcolordialog.c		\
+	gimpcolordialog.h		\
 	gimpcolordisplayeditor.c	\
 	gimpcolordisplayeditor.h	\
 	gimpcoloreditor.c		\
