2004-09-25  Maurits Rijk  <m.rijk@chello.nl>
	* plug-ins/imagemap/imap_stock.[ch]
	* plug-ins/imagemap/Makefile.am
	* plug-ins/imagemap/*.xpm: get rid of all .xpm images

	* configure.in
	* plug-ins/imagemap/images/*: and add them as .png here

	* plug-ins/imagemap/imap_browse.c: remove unused include.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14864 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/imagemap/Makefile.am
+++ b/plug-ins/imagemap/Makefile.am
@@ -12,22 +12,13 @@ endif
 
 AM_LDFLAGS = $(mwindows)
 
+SUBDIRS = images
+
 libexecdir = $(gimpplugindir)/plug-ins
 
 libexec_PROGRAMS = imagemap
 
 EXTRA_DIST = \
-	arrow.xpm	\
-	circle.xpm	\
-	coord.xpm	\
-	dimension.xpm	\
-	java.xpm	\
-	link.xpm	\
-	map_info.xpm	\
-	polygon.xpm	\
-	rectangle.xpm	\
-	to_back.xpm	\
-	to_front.xpm	\
 	AUTHORS		\
 	NEWS		\
 	README		\
@@ -139,7 +130,8 @@ imagemap_SOURCES = \
 	imap_toolbar.c			\
 	imap_toolbar.h			\
 	imap_tools.c			\
-	imap_tools.h
+	imap_tools.h			\
+	pix-data.h
 
 INCLUDES = \
 	-I$(top_srcdir)	\
