--- a/configure.in
+++ b/configure.in
@@ -1643,6 +1643,7 @@ plug-ins/help/Makefile
 plug-ins/helpbrowser/Makefile
 plug-ins/ifscompose/Makefile
 plug-ins/imagemap/Makefile
+plug-ins/imagemap/images/Makefile
 plug-ins/maze/Makefile
 plug-ins/pagecurl/Makefile
 plug-ins/print/Makefile
