2004-09-27  Sven Neumann  <sven@gimp.org>
	* themes/Default/images/Makefile.am
	* themes/Default/images/stock-frame-64.png: added a stock icon
	that shows a simple drop shadow but could be exchanged for other
	image decorations.

	* libgimpwidgets/gimpstock.[ch]: register the new icon.

	* app/widgets/Makefile.am
	* app/widgets/gimpviewrenderer-frame.[ch]: new file that holds some
	ugly code to draw a frame around a preview pixbuf.

	* app/widgets/gimpviewrenderer.[ch]: the frame pixbuf is attached
	to the GimpViewRenderer class so it can be shared by all renderers.

	* app/widgets/gimpviewrendererimagefile.c: use the new functionality
	to draw a nice frame around imagefile previews.

	* app/widgets/gimpcontainerbox.c: draw imagefile preview w/o a border.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14884 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/widgets/Makefile.am
+++ b/app/widgets/Makefile.am
@@ -248,6 +248,8 @@ libappwidgets_a_sources = \
 	gimpviewabledialog.h		\
 	gimpviewrenderer.c		\
 	gimpviewrenderer.h		\
+	gimpviewrenderer-frame.c	\
+	gimpviewrenderer-frame.h	\
 	gimpviewrenderer-utils.c	\
 	gimpviewrenderer-utils.h	\
 	gimpviewrendererbrush.c		\
