2004-09-28  Sven Neumann  <sven@gimp.org>
	* docs/gimp.1.in: updated name of the splash image.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14896 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/docs/gimp.1.in
+++ b/docs/gimp.1.in
@@ -143,8 +143,6 @@ config settings.
 
 \fB$HOME\fP/@gimpdir@/menurc - user's set of keybindings.
 
-@gimpsysconfdir@/menurc - system wide set of keybindings.
-
 \fB$HOME\fP/@gimpdir@/parasiterc - Description of all available GIMP
 parasites. This is file is recreated everytime GIMP starts up.
 
@@ -224,8 +222,9 @@ files.
 
 \fB$HOME\fP/@gimpdir@/gfig - user created and installed gfig files.
 
-@gimpdatadir@/images/gimp_splash.png - image used for the GIMP splash
-screen.
+@gimpdatadir@/images/gimp-splash.png - image used for the GIMP splash
+screen. If a file called gimp-splash.png is found in
+\fB$HOME\fP/@gimpdir@/, then that image is used instead.
 
 @gimpdatadir@/images/gimp_logo.png - image used in the GIMP about
 dialog.
