2004-09-29  Michael Natterer  <mitch@gimp.org>
	* tools/pdbgen/Makefile.am
	* tools/pdbgen/groups.pl: renamed group "gradient_edit" to
	"gradient" and added "brush", "palette" and "pattern" groups.

	* tools/pdbgen/pdb/gradient_edit.pdb: removed.

	* tools/pdbgen/pdb/brush.pdb
	* tools/pdbgen/pdb/gradient.pdb
	* tools/pdbgen/pdb/palette.pdb
	* tools/pdbgen/pdb/pattern.pdb: new files containing functions
	which create, duplicate, rename, delete, query and manipulate
	a single brush, pattern etc.

	* tools/pdbgen/pdb/brushes.pdb
	* tools/pdbgen/pdb/gradients.pdb
	* tools/pdbgen/pdb/palettes.pdb
	* tools/pdbgen/pdb/patterns.pdb: deprecated stuff that is obsolete
	now and simply removed the procedures that were added after 2.0.

	* app/pdb/gradient_edit_cmds.c
	* libgimp/gimpgradientedit_pdb.[ch]: removed.

	* app/pdb/brush_cmds.c
	* app/pdb/gradient_cmds.c
	* app/pdb/palette_cmds.c
	* app/pdb/pattern_cmds.c
	* libgimp/gimpbrush_pdb.[ch]
	* libgimp/gimpgradient_pdb.[ch]
	* libgimp/gimppalette_pdb.[ch]
	* libgimp/gimppattern_pdb.[ch]: new files.

	* app/pdb/brushes_cmds.c
	* app/pdb/gradients_cmds.c
	* app/pdb/internal_procs.c
	* app/pdb/palettes_cmds.c
	* app/pdb/patterns_cmds.c
	* libgimp/gimp_pdb.h
	* libgimp/gimpbrushes_pdb.[ch]
	* libgimp/gimpgradients_pdb.[ch]
	* libgimp/gimppalettes_pdb.[ch]
	* libgimp/gimppatterns_pdb.[ch]: regenerated.

	* app/pdb/Makefile.am
	* libgimp/Makefile.am
	* plug-ins/gfig/gfig-style.c: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14902 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimp/Makefile.am
+++ b/libgimp/Makefile.am
@@ -74,6 +74,7 @@ EXTRA_DIST = \
 lib_LTLIBRARIES = libgimp-2.0.la libgimpui-2.0.la
 
 PDB_WRAPPERS_C = \
+	gimpbrush_pdb.c			\
 	gimpbrushes_pdb.c		\
 	gimpbrushselect_pdb.c		\
 	gimpchannel_pdb.c		\
@@ -88,7 +89,7 @@ PDB_WRAPPERS_C = \
 	gimpfonts_pdb.c			\
 	gimpfontselect_pdb.c		\
 	gimpgimprc_pdb.c		\
-	gimpgradientedit_pdb.c		\
+	gimpgradient_pdb.c		\
 	gimpgradients_pdb.c		\
 	gimpgradientselect_pdb.c	\
 	gimpguides_pdb.c		\
@@ -98,10 +99,12 @@ PDB_WRAPPERS_C = \
 	gimpmessage_pdb.c		\
 	gimpmisc_pdb.c			\
 	gimppainttools_pdb.c		\
+	gimppalette_pdb.c		\
 	gimppalettes_pdb.c		\
 	gimppaletteselect_pdb.c		\
 	gimpparasite_pdb.c		\
 	gimppaths_pdb.c			\
+	gimppattern_pdb.c		\
 	gimppatterns_pdb.c		\
 	gimppatternselect_pdb.c		\
 	gimpplugin_pdb.c		\
@@ -116,6 +119,7 @@ PDB_WRAPPERS_C = \
 
 PDB_WRAPPERS_H = \
 	gimp_pdb.h			\
+	gimpbrush_pdb.h			\
 	gimpbrushes_pdb.h		\
 	gimpbrushselect_pdb.h		\
 	gimpchannel_pdb.h		\
@@ -130,7 +134,7 @@ PDB_WRAPPERS_H = \
 	gimpfonts_pdb.h			\
 	gimpfontselect_pdb.h		\
 	gimpgimprc_pdb.h		\
-	gimpgradientedit_pdb.h		\
+	gimpgradient_pdb.h		\
 	gimpgradients_pdb.h		\
 	gimpgradientselect_pdb.h	\
 	gimpguides_pdb.h		\
@@ -140,10 +144,12 @@ PDB_WRAPPERS_H = \
 	gimpmessage_pdb.h		\
 	gimpmisc_pdb.h			\
 	gimppainttools_pdb.h		\
+	gimppalette_pdb.h		\
 	gimppalettes_pdb.h		\
 	gimppaletteselect_pdb.h		\
 	gimpparasite_pdb.h		\
 	gimppaths_pdb.h			\
+	gimppattern_pdb.h		\
 	gimppatterns_pdb.h		\
 	gimppatternselect_pdb.h		\
 	gimpplugin_pdb.h		\
