2004-09-30  Michael Natterer  <mitch@gimp.org>
	Cleaned up the DB Browser and Plugin Details code and GUI.  It's
	not perfect yet but at least they don't look like crap any more.
	Fixes bug #131490.

	* plug-ins/common/plugin-defs.pl
	* plug-ins/common/plugindetails.c: removed this plugin.

	* plug-ins/common/.cvsignore
	* plug-ins/common/Makefile.am: regenerated.

	* plug-ins/dbbrowser/Makefile.am
	* plug-ins/dbbrowser/dbbrowser.c
	* plug-ins/dbbrowser/dbbrowser_utils.[ch]: removed these files.

	* plug-ins/dbbrowser/gimpprocbrowser.[ch]
	* plug-ins/dbbrowser/gimpprocview.[ch]: new cleaned up files.

	* plug-ins/dbbrowser/plugin-browser.c: the former plugindetails.
	* plug-ins/dbbrowser/procedure-browser.c: the former dbbrowser.

	* plug-ins/script-fu/Makefile.am: link against the new library
	libgimpprocbrowser.a

	* plug-ins/script-fu/script-fu-console.c: changed #includes
	accordingly. Monir cleanup.

	* tools/pdbgen/pdb/plug_in.pdb (plugins_query): fixed menu_path
	return value. Was broken since the plug-in menu registering
	changes.

	* app/pdb/plug_in_cmds.c: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14921 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/dbbrowser/Makefile.am
+++ b/plug-ins/dbbrowser/Makefile.am
@@ -14,12 +14,21 @@ AM_LDFLAGS = $(mwindows)
 
 libexecdir = $(gimpplugindir)/plug-ins
 
-libexec_PROGRAMS = dbbrowser
+noinst_LIBRARIES = libgimpprocbrowser.a
+libexec_PROGRAMS = plugin-browser procedure-browser
 
-dbbrowser_SOURCES = \
-	dbbrowser.c		\
-	dbbrowser_utils.c	\
-	dbbrowser_utils.h
+libgimpprocbrowser_a_SOURCES = \
+	gimpprocbrowser.c	\
+	gimpprocbrowser.h	\
+	gimpprocview.c		\
+	gimpprocview.h
+
+plugin_browser_SOURCES = \
+	plugin-browser.c
+
+procedure_browser_SOURCES = \
+	procedure-browser.c
+
 
 EXTRA_DIST = README
 
@@ -34,6 +43,7 @@ LDADD = \
 	$(libgimp)		\
 	$(libgimpcolor)		\
 	$(libgimpbase)		\
+	libgimpprocbrowser.a	\
 	$(GTK_LIBS)		\
 	$(RT_LIBS)		\
 	$(INTLLIBS)
