2004-09-30  Michael Natterer  <mitch@gimp.org>
	* plug-ins/dbbrowser/Makefile.am
	* plug-ins/dbbrowser/gimpprocbox.c: new files holding more common
	code from the two browsers.

	* plug-ins/dbbrowser/gimpprocbrowser.c: use it.

	* plug-ins/dbbrowser/plugin-browser.c: ditto. Re-enabled sorting
	by all columns in both views. More cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14926 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/dbbrowser/Makefile.am
+++ b/plug-ins/dbbrowser/Makefile.am
@@ -18,6 +18,8 @@ noinst_LIBRARIES = libgimpprocbrowser.a
 libexec_PROGRAMS = plugin-browser procedure-browser
 
 libgimpprocbrowser_a_SOURCES = \
+	gimpprocbox.c		\
+	gimpprocbox.h		\
 	gimpprocbrowser.c	\
 	gimpprocbrowser.h	\
 	gimpprocview.c		\
