2004-10-04  Sven Neumann  <sven@gimp.org>
	* plug-ins/imagemap/Makefile.am (imagemap_SOURCES): removed pix-data.h.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14972 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/imagemap/Makefile.am
+++ b/plug-ins/imagemap/Makefile.am
@@ -130,8 +130,7 @@ imagemap_SOURCES = \
 	imap_toolbar.c			\
 	imap_toolbar.h			\
 	imap_tools.c			\
-	imap_tools.h			\
-	pix-data.h
+	imap_tools.h
 
 INCLUDES = \
 	-I$(top_srcdir)	\
