2004-10-06  Sven Neumann  <sven@gimp.org>
	* app/app_procs.[ch]
	* app/batch.[ch]
	* app/main.c: added new command-line option "--batch-interpreter"
	that allows to specify the procedure to use to process batch
	commands. Removed the perl-server hack but kept Script-Fu as the
	default for backward compatibility.

	* docs/gimp.1.in: documented the new option.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14994 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/docs/gimp.1.in
+++ b/docs/gimp.1.in
@@ -9,7 +9,7 @@ gimp - an image manipulation and paint program.
 [\-\-session \fI<name>\fP] [\-g] [\-\-gimprc \fI<gimprc>\fP]
 [\-\-system\-gimprc \fI<gimprc>\fP] [\-\-dump\-gimprc\fP]
 [\-\-console\-messages] [\-\-debug\-handlers]
-[\-b] [\-\-batch \fI<commands>\fP]
+[\-\-batch\-interpreter \fI<procedure>\fP] [\-b] [\-\-batch \fI<commands>\fP]
 [\fIfilename\fP] ...
 
 .SH DESCRIPTION
@@ -97,6 +97,10 @@ If a stack-trace should be generated in case of fatal signals.
 .TP 8
 .B \-\-pdb\-compat\-mode \fI{off|on|warn}\fP
 If the PDB should provide aliases for deprecated functions.
+.TP 8
+.B \-\-batch-interpreter \fI<procedure>\fP
+Speficies the procedure to use to process batch events. The default is
+to let Script-Fu evaluate the commands.
 .TP 8
 .B \-b, \-\-batch \fI<commands>\fP
 Execute the set of \fI<commands>\fP non-interactively. The set
