2004-10-06  Sven Neumann  <sven@gimp.org>
	* plug-ins/script-fu/scripts/selection-round.scm: applied patch by
	Alan Horkan that improves usability and usefulness of this script.
	Did some code cleanup and added the old procedure for backward
	compatibility. Fixes bug #145147.

	* menus/image-menu.xml.in: renamed placeholder in Image->Select
	from "Outline" to "Modify".


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@15001 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/menus/image-menu.xml.in
+++ b/menus/image-menu.xml.in
@@ -182,7 +182,7 @@
       <menuitem action="vectors-selection-from-vectors" />
       <menuitem action="dialogs-selection-editor" />
       <separator />
-      <placeholder name="Outline">
+      <placeholder name="Modify">
         <menuitem action="select-feather" />
         <menuitem action="select-sharpen" />
         <menuitem action="select-shrink" />
