2004-10-07  Michael Natterer  <mitch@gimp.org>
	Merged the gz and bz2 plug-ins into one generic compression
	handler that can be extended by adding entries to a table of
	compressor definitions:

	* configure.in: removed bz2 special casing for win32.

	* plug-ins/common/bz2.c
	* plug-ins/common/gz.c: removed.

	* plug-ins/common/compressor.c: new plug-in.

	* plug-ins/common/plugin-defs.pl: changed accordingly.

	* plug-ins/common/.cvsignore
	* plug-ins/common/Makefile.am: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@15020 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/common/.cvsignore
+++ b/plug-ins/common/.cvsignore
@@ -16,7 +16,6 @@ blinds
 blur
 borderaverage
 bumpmap
-bz2
 c_astretch
 cartoon
 ccanalyze
@@ -26,6 +25,7 @@ color_enhance
 colorify
 colortoalpha
 compose
+compressor
 convmatrix
 csource
 cubism
@@ -60,7 +60,6 @@ gradmap
 grid
 gtm
 guillotine
-gz
 header
 hot
 illusion
