--- a/po-plug-ins/POTFILES.in
+++ b/po-plug-ins/POTFILES.in
@@ -27,7 +27,6 @@ plug-ins/common/blinds.c
 plug-ins/common/blur.c
 plug-ins/common/borderaverage.c
 plug-ins/common/bumpmap.c
-plug-ins/common/bz2.c
 plug-ins/common/c_astretch.c
 plug-ins/common/cartoon.c
 plug-ins/common/ccanalyze.c
@@ -37,6 +36,7 @@ plug-ins/common/color_enhance.c
 plug-ins/common/colorify.c
 plug-ins/common/colortoalpha.c
 plug-ins/common/compose.c
+plug-ins/common/compressor.c
 plug-ins/common/convmatrix.c
 plug-ins/common/csource.c
 plug-ins/common/cubism.c
@@ -71,7 +71,6 @@ plug-ins/common/gradmap.c
 plug-ins/common/grid.c
 plug-ins/common/gtm.c
 plug-ins/common/guillotine.c
-plug-ins/common/gz.c
 plug-ins/common/header.c
 plug-ins/common/hot.c
 plug-ins/common/illusion.c
