2004-10-08 Kevin Cozens <kcozens@cvs.gimp.org>
    * ftx/Makefile.am
    * re/Makefile.am
    * scripts/Makefile.am
    * scripts/images/Makefile.am
    * tiny-fu/Makefile.am
    * tinyscheme/Makefile.am: Cleaned up files, added EXTRA_DIST with
    list of files to include in a distribution. Fixed typo in filename
    in the re/Makefile.am file.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@15037 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/script-fu/ftx/Makefile.am
+++ b/plug-ins/script-fu/ftx/Makefile.am
@@ -1,12 +1,16 @@
 ## Process this file with automake to produce Makefile.in
 
-AM_CFLAGS = -DUSE_INTERFACE=1
-
-INCLUDES = \
-	-I$(top_srcdir)		\
-	$(GIMP_CFLAGS)		\
-	-I$(includedir)
+AM_CFLAGS =    \
+    -DUSE_INTERFACE=1 \
+    -I$(top_srcdir)   \
+    $(GIMP_CFLAGS)
 
 noinst_LIBRARIES = libftx.a
 
 libftx_a_SOURCES = ftx.c ftx.h
+
+EXTRA_DIST = \
+    LICENSE           \
+    README            \
+    ftx-functions.txt \
+    listhome.scm
